--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -2,6 +2,7 @@
   font-size: 2.75rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  font-family: 'Georgia', 'Times New Roman', serif;
 }
 
 .description {
